Implement query builder for Crud Api Controllers

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -5,14 +5,11 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <common>
     <logging>
-      <factoryAdapter
-        type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
+      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <!-- LogLevel [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
@@ -34,19 +31,17 @@
     <sources>
       <source name="TraceSourceApp" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="textListener"/>
-          <remove name="Default"/>
+          <add name="textListener" />
+          <remove name="Default" />
         </listeners>
       </source>
     </sources>
     <sharedListeners>
-      <add name="textListener"
-           type="System.Diagnostics.TextWriterTraceListener"
-           initializeData="SchoolExpress.log"/>
+      <add name="textListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="SchoolExpress.log" />
     </sharedListeners>
     <switches>
       <!-- TraceEventType [ All | Verbose | Information | Warning | Error | Critical ] -->
-      <add name="sourceSwitch" value="All"/>
+      <add name="sourceSwitch" value="All" />
     </switches>
   </system.diagnostics>
   <connectionStrings>
@@ -54,10 +49,10 @@
     <add name="SchoolExpressConnection.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb;Persist Security Info=true" providerName="Npgsql" />
   </connectionStrings>
   <appSettings>
-    <add key="SchoolExpressConnection" value="SchoolExpressConnection.pgsql" />
-    <add key="BaseUri" value="https://+:444/" />
+    <add key="SchoolExpressConnection" value="SchoolExpressConnection.mssql" />
+    <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
-    <add key="AuthenticationModes" value="OAUTH" />
+    <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
     <add key="DataSources" value="" />
@@ -136,18 +131,14 @@
   <entityFramework>
     <!--<defaultConnectionFactory configSource="Configs\ConnectionFactory.config" />-->
     <providers>
-      <provider invariantName="System.Data.SqlClient"
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql"
-           type="Npgsql.NpgsqlFactory, Npgsql" />
-      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient"
-           description=".Net Framework Data Provider for SqlServer"
-           type="System.Data.SqlClient.SqlClientFactory, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
+      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient" description=".Net Framework Data Provider for SqlServer" type="System.Data.SqlClient.SqlClientFactory, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     </DbProviderFactories>
   </system.data>
 </configuration>
