--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
@@ -31,6 +30,7 @@
   <package id="Npgsql" version="4.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net452" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
