Refactor Crud Api Controllers

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -11,7 +11,7 @@
     <logging>
       <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <!-- LogLevel [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Debug" />
+        <arg key="level" value="Trace" />
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDataTime" value="true" />
