Add Azure Cloud Service project

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -24,20 +24,25 @@
     <trace autoflush="true" indentsize="0">
       <listeners>
         <clear />
-        <add name="textListener" />
+        <add name="TextListener" />
+        <add name="AzureDiagnostics" />
         <remove name="Default" />
       </listeners>
     </trace>
     <sources>
       <source name="TraceSourceApp" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="textListener" />
+          <add name="TextListener" />
+          <add name="AzureDiagnostics" />
           <remove name="Default" />
         </listeners>
       </source>
     </sources>
     <sharedListeners>
-      <add name="textListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="SchoolExpress.log" />
+      <add name="TextListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="SchoolExpress.log" />
+      <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+        <filter type="" />
+      </add>
     </sharedListeners>
     <switches>
       <!-- TraceEventType [ All | Verbose | Information | Warning | Error | Critical ] -->
@@ -50,7 +55,7 @@
   </connectionStrings>
   <appSettings>
     <add key="SchoolExpressConnection" value="SchoolExpressConnection.mssql" />
-    <add key="BaseUri" value="http://localhost:9000/" />
+    <add key="BaseUri" value="http://127.0.0.1:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
@@ -88,7 +93,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Azure.KeyVault.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Unity.Interception" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
@@ -112,7 +117,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
@@ -124,7 +129,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.8.0" newVersion="3.1.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Logging" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
