--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -3,40 +3,45 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net452" />
+  <package id="EntityFramework6.Npgsql" version="3.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.FileSystems" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Jwt" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="4.0.0" targetFramework="net452" />
-  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.0.61" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.1.66" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
-  <package id="Npgsql" version="4.0.0" targetFramework="net452" />
+  <package id="Npgsql" version="4.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net452" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.4" targetFramework="net452" />
   <package id="Topshelf.Common.Logging" version="4.0.1" targetFramework="net452" />
-  <package id="Unity" version="5.8.6" targetFramework="net452" />
-  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
-  <package id="Unity.Interception" version="5.5.3" targetFramework="net452" />
+  <package id="Unity" version="5.8.11" targetFramework="net452" />
+  <package id="Unity.ServiceLocator" version="2.0.0" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.3.1" targetFramework="net452" />
 </packages>
