Rename Controllers in Cruds Fiolder

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -4,49 +4,48 @@
   <configSections>
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+      <section name="logging.multipleLoggers" type="Common.Logging.MultipleLogger.ConfigurationSectionHandler, Common.Logging.MultipleLogger" />
     </sectionGroup>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <common>
     <logging>
-      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
+      <factoryAdapter type="Common.Logging.MultipleLogger.MultiLoggerFactoryAdapter, Common.Logging.MultipleLogger">
         <!-- LogLevel [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Trace" />
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDataTime" value="true" />
         <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
-        <arg key="useTraceSource" value="true" />
       </factoryAdapter>
     </logging>
+    <logging.multipleLoggers>
+      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService" />
+      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
+        <arg key="useTraceSource" value="true" />
+      </factoryAdapter>
+    </logging.multipleLoggers>
   </common>
   <system.diagnostics>
-    <trace autoflush="true" indentsize="0">
-      <listeners>
-        <clear />
-        <add name="TextListener" />
-        <add name="AzureDiagnostics" />
-        <remove name="Default" />
-      </listeners>
-    </trace>
+    <trace autoflush="true" indentsize="0" />
     <sources>
-      <source name="TraceSourceApp" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
+      <source name="customTraceSource" switchName="sourceSwitch">
         <listeners>
-          <add name="TextListener" />
           <add name="AzureDiagnostics" />
-          <remove name="Default" />
+          <add name="textWriterListener" />
         </listeners>
       </source>
     </sources>
-    <sharedListeners>
-      <add name="TextListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="SchoolExpress.log" />
-      <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+    <sharedListeners>    
+      <add name="textWriterListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="SchoolExpress.log" />
+      <add name="coloredConsoleListener" type="SchoolExpress.WebService.Utils.ColorConsoleTraceListener, SchoolExpress.WebService" />
+      <add name="AzureDiagnostics" type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
         <filter type="" />
       </add>
     </sharedListeners>
     <switches>
       <!-- TraceEventType [ All | Verbose | Information | Warning | Error | Critical ] -->
-      <add name="sourceSwitch" value="All" />
+      <add name="sourceSwitch" value="Verbose" />
     </switches>
   </system.diagnostics>
   <connectionStrings>
