--- a/SchoolExpress.WebService/App.Release.config
+++ b/SchoolExpress.WebService/App.Release.config
@@ -8,11 +8,17 @@
   </appSettings>
   <common>
     <logging>
-      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging"
-                      xdt:Transform="SetAttributes">
-        <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Error" xdt:Transform="Replace" xdt:Locator="Match(key)" />
+      <factoryAdapter type="Common.Logging.MultipleLogger.MultiLoggerFactoryAdapter, Common.Logging.MultipleLogger">
+        <arg key="level" value="Error" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
       </factoryAdapter>
     </logging>
+    <logging.multipleLoggers>
+      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService" xdt:Transform="Remove" />
+    </logging.multipleLoggers>
   </common>
+  <system.diagnostics>
+    <switches>
+      <add name="sourceSwitch" value="Error" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    </switches>
+  </system.diagnostics>
 </configuration>
