--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
+  <package id="Common.Logging.MultipleLogger" version="3.4.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="EntityFramework6.Npgsql" version="3.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net452" />
