--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -13,15 +13,16 @@
       <factoryAdapter type="Common.Logging.MultipleLogger.MultiLoggerFactoryAdapter, Common.Logging.MultipleLogger">
         <!-- LogLevel [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Trace" />
-        <arg key="showLevel" value="true" />
-        <arg key="showLogName" value="false" />
-        <arg key="showDataTime" value="true" />
-        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
       </factoryAdapter>
     </logging>
     <logging.multipleLoggers>
-      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService" />
+      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
+        <arg key="showLogName" value="false" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss" />
+      </factoryAdapter>
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
+        <arg key="showLogName" value="false" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss" />
         <arg key="useTraceSource" value="true" />
       </factoryAdapter>
     </logging.multipleLoggers>
